@@ -1,3 +1,7 @@
+2004-02-27  Andreas Schwab  <schwab@suse.de>
+
+	* ar.c (main): Support POSIX-compatible argument parsing.
+
 2004-02-23  Daniel Lucq  <daniel@lucq.org>
 
 	* readelf.c (process_mips_specific): Print conflictsno as an
